@@ -2,6 +2,8 @@ package uk.gov.hmcts.probate.service.solicitorexecutor;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import uk.gov.hmcts.probate.model.ccd.raw.AdditionalExecutor;
@@ -11,19 +13,35 @@ import uk.gov.hmcts.probate.model.ccd.raw.AdditionalExecutorNotApplyingPowerRese
 import uk.gov.hmcts.probate.model.ccd.raw.AdditionalExecutorPartners;
 import uk.gov.hmcts.probate.model.ccd.raw.AdditionalExecutorTrustCorps;
 import uk.gov.hmcts.probate.model.ccd.raw.CollectionMember;
+import uk.gov.hmcts.probate.model.ccd.raw.DynamicRadioList;
+import uk.gov.hmcts.probate.model.ccd.raw.DynamicRadioListElement;
+import uk.gov.hmcts.probate.model.ccd.raw.IntestacyAdditionalExecutor;
+import uk.gov.hmcts.probate.model.ccd.raw.SolsApplicantFamilyDetails;
 import uk.gov.hmcts.probate.model.ccd.raw.request.CallbackRequest;
 import uk.gov.hmcts.probate.model.ccd.raw.request.CaseData;
 import uk.gov.hmcts.probate.model.ccd.raw.request.CaseDetails;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
+import static uk.gov.hmcts.probate.model.Constants.CHILD;
+import static uk.gov.hmcts.probate.model.Constants.GRAND_CHILD;
+import static uk.gov.hmcts.probate.model.Constants.HALF_BLOOD_SIBLING;
+import static uk.gov.hmcts.probate.model.Constants.HALF_BLOOD_NIECE_OR_NEPHEW;
+import static uk.gov.hmcts.probate.model.Constants.PARENT;
 import static uk.gov.hmcts.probate.model.Constants.NO;
+import static uk.gov.hmcts.probate.model.Constants.GRANT_TYPE_INTESTACY;
 import static uk.gov.hmcts.probate.model.Constants.TITLE_AND_CLEARING_TRUST_CORP_SDJ;
+import static uk.gov.hmcts.probate.model.Constants.WHOLE_BLOOD_SIBLING;
+import static uk.gov.hmcts.probate.model.Constants.WHOLE_BLOOD_NIECE_OR_NEPHEW;
 import static uk.gov.hmcts.probate.model.Constants.YES;
+import static uk.gov.hmcts.probate.model.Constants.EXECUTOR_TYPE_APPLICANTS;
 import static uk.gov.hmcts.probate.util.CommonVariables.ADDITIONAL_EXECUTOR_APPLYING;
 import static uk.gov.hmcts.probate.util.CommonVariables.ADDITIONAL_EXECUTOR_NOT_APPLYING;
 import static uk.gov.hmcts.probate.util.CommonVariables.DIRECTOR;
@@ -121,6 +139,17 @@ class ExecutorListMapperServiceTest {
 
         assertEquals(2, newExecsNotApplying.size());
         assertEquals(SOLICITOR_ID, newExecsNotApplying.get(0).getId());
+    }
+
+    @Test
+    void shouldUpdateSolApplyingExec() {
+        List<CollectionMember<AdditionalExecutorApplying>> newExecsApplying = underTest
+                .addSolicitorToApplyingList(callbackRequestMock.getCaseDetails().getData(),
+                        additionalExecutorsApplyingMock);
+
+        assertEquals(2, newExecsApplying.size());
+        assertEquals(SOLICITOR_SOT_FULLNAME, newExecsApplying.get(0).getValue().getApplyingExecutorName());
+        assertEquals(SOLICITOR_ID, newExecsApplying.get(0).getId());
     }
 
     @Test
@@ -258,6 +287,130 @@ class ExecutorListMapperServiceTest {
         assertEquals(1, result.size());
     }
 
+    private static Stream<String> relationship() {
+        return Stream.of(CHILD, GRAND_CHILD, WHOLE_BLOOD_SIBLING, WHOLE_BLOOD_NIECE_OR_NEPHEW,
+                HALF_BLOOD_SIBLING, HALF_BLOOD_NIECE_OR_NEPHEW, PARENT);
+    }
+
+    @ParameterizedTest
+    @MethodSource("relationship")
+    void mapsIntestacyExecutorsToApplyingExecutorsWithChildRelationship(final String coApplicantRelationship) {
+        DynamicRadioListElement radioListElement = DynamicRadioListElement.builder()
+                .code(coApplicantRelationship)
+                .label(coApplicantRelationship)
+                .build();
+        DynamicRadioList radioList = DynamicRadioList.builder()
+                .listItems(List.of(radioListElement))
+                .value(radioListElement)
+                .build();
+        SolsApplicantFamilyDetails familyDetails = SolsApplicantFamilyDetails.builder()
+                .relationship(radioList)
+                .coApplicantAdoptedIn(YES)
+                .coApplicantAdoptionInEnglandOrWales(NO)
+                .coApplicantAdoptedOut(NO)
+                .build();
+        IntestacyAdditionalExecutor additionalExecutor = IntestacyAdditionalExecutor.builder()
+                .solsApplicantFamilyDetails(familyDetails)
+                .build();
+        List<CollectionMember<IntestacyAdditionalExecutor>> executorList =
+                List.of(new CollectionMember<>(additionalExecutor));
+
+        CaseData caseData = CaseData.builder().solsIntestacyExecutorList(executorList).build();
+
+
+        List<CollectionMember<AdditionalExecutorApplying>> result =
+                underTest.mapFromSolsIntestacyExecutorListToApplyingExecutors(caseData);
+
+        assertEquals(1, result.size());
+        AdditionalExecutorApplying applying = result.getFirst().getValue();
+        assertEquals(EXECUTOR_TYPE_APPLICANTS, applying.getApplyingExecutorType());
+        assertEquals(coApplicantRelationship, applying.getApplicantFamilyDetails().getRelationshipToDeceased());
+    }
+
+    @Test
+    void throwsExceptionForUnknownRelationship() {
+        DynamicRadioListElement radioListElement = DynamicRadioListElement.builder()
+                .code("UNKNOWN_RELATIONSHIP")
+                .label("UNKNOWN_RELATIONSHIP")
+                .build();
+        DynamicRadioList radioList = DynamicRadioList.builder()
+                .listItems(List.of(radioListElement))
+                .value(radioListElement)
+                .build();
+        SolsApplicantFamilyDetails familyDetails = SolsApplicantFamilyDetails.builder()
+                .relationship(radioList)
+                .coApplicantAdoptedIn(YES)
+                .coApplicantAdoptionInEnglandOrWales(NO)
+                .coApplicantAdoptedOut(NO)
+                .build();
+        IntestacyAdditionalExecutor additionalExecutor = IntestacyAdditionalExecutor.builder()
+                .solsApplicantFamilyDetails(familyDetails)
+                .build();
+        List<CollectionMember<IntestacyAdditionalExecutor>> executorList =
+                List.of(new CollectionMember<>(additionalExecutor));
+
+        CaseData caseData = CaseData.builder().solsIntestacyExecutorList(executorList).build();
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                underTest.mapFromSolsIntestacyExecutorListToApplyingExecutors(caseData)
+        );
+        assertTrue(ex.getMessage().contains("Unexpected relationship to deceased"));
+    }
+
+    @Test
+    void returnsEmptyListWhenNoExecutors() {
+        CaseData caseData = CaseData.builder().solsIntestacyExecutorList(new ArrayList<>()).build();
+        List<CollectionMember<AdditionalExecutorApplying>> result =
+                underTest.mapFromSolsIntestacyExecutorListToApplyingExecutors(caseData);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void mapsWholeBloodNieceOrNephewFamilyDetails() {
+        DynamicRadioListElement radioListElement = DynamicRadioListElement.builder()
+                .code(WHOLE_BLOOD_NIECE_OR_NEPHEW)
+                .label(WHOLE_BLOOD_NIECE_OR_NEPHEW)
+                .build();
+        DynamicRadioList radioList = DynamicRadioList.builder()
+                .listItems(List.of(radioListElement))
+                .value(radioListElement)
+                .build();
+        SolsApplicantFamilyDetails familyDetails = SolsApplicantFamilyDetails.builder()
+                .relationship(radioList)
+                .wholeNieceOrNephewParentDieBeforeDeceased(YES)
+                .wholeNieceOrNephewParentAdoptedIn(NO)
+                .wholeNieceOrNephewParentAdoptionInEnglandOrWales(YES)
+                .wholeNieceOrNephewParentAdoptedOut(NO)
+                .coApplicantAdoptedIn(YES)
+                .coApplicantAdoptionInEnglandOrWales(NO)
+                .coApplicantAdoptedOut(YES)
+                .build();
+        IntestacyAdditionalExecutor additionalExecutor = IntestacyAdditionalExecutor.builder()
+                .additionalExecForenames(EXEC_FIRST_NAME)
+                .additionalExecLastname(EXEC_SURNAME)
+                .additionalExecAddress(EXEC_ADDRESS)
+                .solsApplicantFamilyDetails(familyDetails)
+                .build();
+        CaseData caseData = CaseData.builder()
+                .solsIntestacyExecutorList(List.of(new CollectionMember<>(EXEC_ID, additionalExecutor)))
+                .build();
+
+        AdditionalExecutorApplying applying =
+                underTest.mapFromSolsIntestacyExecutorListToApplyingExecutors(caseData).getFirst().getValue();
+
+        assertEquals(EXEC_FIRST_NAME, applying.getApplyingExecutorFirstName());
+        assertEquals(EXEC_SURNAME, applying.getApplyingExecutorLastName());
+        assertEquals(EXEC_NAME, applying.getApplyingExecutorName());
+        assertEquals(EXEC_ADDRESS, applying.getApplyingExecutorAddress());
+        assertEquals(YES, applying.getApplicantFamilyDetails().getWholeBloodSiblingDiedBeforeDeceased());
+        assertEquals(NO, applying.getApplicantFamilyDetails().getWholeBloodSiblingAdoptedIn());
+        assertEquals(YES, applying.getApplicantFamilyDetails().getWholeBloodSiblingAdoptionInEnglandOrWales());
+        assertEquals(NO, applying.getApplicantFamilyDetails().getWholeBloodSiblingAdoptedOut());
+        assertEquals(YES, applying.getApplicantFamilyDetails().getWholeBloodNieceOrNephewAdoptedIn());
+        assertEquals(NO, applying.getApplicantFamilyDetails().getWholeBloodNieceOrNephewAdoptionInEnglandOrWales());
+        assertEquals(YES, applying.getApplicantFamilyDetails().getWholeBloodNieceOrNephewAdoptedOut());
+    }
+
     @Test
     void shouldMapFromSolsAdditionalExecToNotApplyingExecutors() {
         List<CollectionMember<AdditionalExecutor>> solsAdditionalExecs = new ArrayList<>();
@@ -272,8 +425,8 @@ class ExecutorListMapperServiceTest {
                 .notApplyingExecutorNameOnWill(EXEC_WILL_NAME)
                 .build();
 
-        assertEquals(expected, result.get(0).getValue());
-        assertEquals(EXEC_ID, result.get(0).getId());
+        assertEquals(expected, result.getFirst().getValue());
+        assertEquals(EXEC_ID, result.getFirst().getId());
         assertEquals(1, result.size());
     }
 
@@ -291,6 +444,20 @@ class ExecutorListMapperServiceTest {
                 .build());
 
         assertEquals(expected.getValue(), result.getValue());
+    }
+
+    @Test
+    void shouldMapFromSolicitorToApplyingExecutorIntestacy() {
+        CaseData caseData = CaseData.builder()
+                .solsSOTForenames(SOLICITOR_SOT_FORENAME)
+                .solsSOTSurname(SOLICITOR_SOT_SURNAME)
+                .solsSolicitorAddress(SOLICITOR_ADDRESS)
+                .solsWillType(GRANT_TYPE_INTESTACY)
+                .build();
+
+        CollectionMember<AdditionalExecutorApplying> result = underTest.mapFromSolicitorToApplyingExecutor(caseData);
+
+        assertEquals(EXECUTOR_TYPE_APPLICANTS, result.getValue().getApplyingExecutorType());
     }
 
     @Test
@@ -359,7 +526,8 @@ class ExecutorListMapperServiceTest {
         assertEquals(result.getValue(), expected.getValue());
     }
 
-    public void shouldMapFromSolicitorToApplyingExecutorTrustCorps() {
+    @Test
+    void shouldMapFromSolicitorToApplyingExecutorTrustCorps() {
         CaseData.CaseDataBuilder<?, ?> caseDataBuilder = CaseData.builder()
                 .solsSOTForenames(SOLICITOR_SOT_FORENAME)
                 .solsSOTSurname(SOLICITOR_SOT_SURNAME)
@@ -383,7 +551,7 @@ class ExecutorListMapperServiceTest {
                 .applyingExecutorFirstName(SOLICITOR_SOT_FORENAME)
                 .applyingExecutorLastName(SOLICITOR_SOT_SURNAME)
                 .applyingExecutorName(SOLICITOR_SOT_FULLNAME)
-                .applyingExecutorType(EXECUTOR_TYPE_NAMED)
+                .applyingExecutorType(EXECUTOR_TYPE_TRUST_CORP)
                 .applyingExecutorAddress(SOLICITOR_ADDRESS)
                 .applyingExecutorTrustCorpPosition(DIRECTOR)
                 .build());
